--- a/src/plugins/qmltooling/qmldbg_messages/CMakeLists.txt
+++ b/src/plugins/qmltooling/qmldbg_messages/CMakeLists.txt
@@ -15,6 +15,7 @@ qt_internal_add_plugin(QDebugMessageServiceFactoryPlugin
         Qt::Core
         Qt::PacketProtocolPrivate
         Qt::QmlPrivate
+    OS2_SHORT_NAME qmldbgme
 )
 
 #### Keys ignored in scope 1:.:.:qmldbg_messages.pro:<TRUE>:
