--- a/src/quickwidgets/CMakeLists.txt
+++ b/src/quickwidgets/CMakeLists.txt
@@ -31,6 +31,7 @@ qt_internal_add_module(QuickWidgets
         Qt::QuickPrivate
         Qt::WidgetsPrivate
     GENERATE_CPP_EXPORTS
+    OS2_SHORT_NAME Qt6QuiWi.dll
 )
 
 qt_internal_extend_target(QuickWidgets CONDITION QT_FEATURE_accessibility
