--- a/src/plugins/qmltooling/qmldbg_debugger/CMakeLists.txt
+++ b/src/plugins/qmltooling/qmldbg_debugger/CMakeLists.txt
@@ -21,6 +21,7 @@ qt_internal_add_plugin(QQmlDebuggerServiceFactoryPlugin
         Qt::CorePrivate
         Qt::PacketProtocolPrivate
         Qt::QmlPrivate
+    OS2_SHORT_NAME qmldbgde
 )
 
 #### Keys ignored in scope 1:.:.:qmldbg_debugger.pro:<TRUE>:
