--- a/src/qml/CMakeLists.txt
+++ b/src/qml/CMakeLists.txt
@@ -413,7 +413,8 @@ qt_internal_add_qml_module(Qml
 #     import QtQuick 2.0
 #     ^
 if(QT_FEATURE_qml_worker_script)
-    _qt_internal_add_qml_static_plugin_dependency(qmlplugin workerscriptplugin)
+#    _qt_internal_add_qml_static_plugin_dependency(qmlplugin workerscriptplugin)
+    _qt_internal_add_qml_static_plugin_dependency(qmlplugin workersn)
 endif()
 
 # special case begin remove the block, handled manually
