--- a/src/quickcontrols2/CMakeLists.txt
+++ b/src/quickcontrols2/CMakeLists.txt
@@ -40,6 +40,7 @@ qt_internal_add_qml_module(QuickControls2
         Qt::Gui
         Qt::Quick
     GENERATE_CPP_EXPORTS
+    OS2_SHORT_NAME Qt6QuiCo
 )
 
 qt_internal_extend_target(qtquickcontrols2plugin
