Avoid DLL name clashes
Signed-off-by: Paul Smedley <paul@smedley.id.au>

--- a/src/plugins/qmltooling/qmldbg_debugger/CMakeLists.txt
+++ b/src/plugins/qmltooling/qmldbg_debugger/CMakeLists.txt
@@ -24,6 +24,7 @@ qt_internal_add_plugin(QQmlDebuggerServiceFactoryPlugin
         Qt::CorePrivate
         Qt::PacketProtocolPrivate
         Qt::QmlPrivate
+    OS2_SHORT_NAME qmldbgde
 )
 
 #### Keys ignored in scope 1:.:.:qmldbg_debugger.pro:<TRUE>:
