--- a/src/labs/settings/CMakeLists.txt
+++ b/src/labs/settings/CMakeLists.txt
@@ -16,4 +16,5 @@ qt_internal_add_qml_module(LabsSettings
          Qt::Qml
      GENERATE_CPP_EXPORTS
      GENERATE_PRIVATE_CPP_EXPORTS
+     OS2_SHORT_NAME Qt6LabSe
 )
