--- a/src/particles/CMakeLists.txt
+++ b/src/particles/CMakeLists.txt
@@ -53,6 +53,7 @@ qt_internal_add_qml_module(QuickParticlesPrivate
         Qt::QuickPrivate
     GENERATE_CPP_EXPORTS
     GENERATE_PRIVATE_CPP_EXPORTS
+    OS2_SHORT_NAME Qt6QuiPa
 )
 
 # Resources:
