--- a/src/plugins/qmltooling/qmldbg_native/CMakeLists.txt
+++ b/src/plugins/qmltooling/qmldbg_native/CMakeLists.txt
@@ -17,6 +17,7 @@ qt_internal_add_plugin(QQmlNativeDebugConnectorFactoryPlugin
         Qt::CorePrivate
         Qt::PacketProtocolPrivate
         Qt::QmlPrivate
+    OS2_SHORT_NAME qmldbgna
 )
 
 #### Keys ignored in scope 1:.:.:qmldbg_native.pro:<TRUE>:
