--- a/src/quickdialogs/quickdialogs/CMakeLists.txt
+++ b/src/quickdialogs/quickdialogs/CMakeLists.txt
@@ -50,6 +50,7 @@ qt_internal_add_qml_module(QuickDialogs2
         Qt::Quick
     GENERATE_CPP_EXPORTS
     GENERATE_PRIVATE_CPP_EXPORTS
+    OS2_SHORT_NAME Qt6QuiDi
 )
 
 qt_internal_add_docs(QuickDialogs2
