Avoid DLL name clashes
Signed-off-by: Paul Smedley <paul@smedley.id.au>

--- a/src/particles/CMakeLists.txt
+++ b/src/particles/CMakeLists.txt
@@ -48,6 +48,7 @@ qt_internal_add_qml_module(QuickParticlesPrivate
         Qt::GuiPrivate
         Qt::QmlPrivate
         Qt::QuickPrivate
+    OS2_SHORT_NAME Qt6QuiPa
 )
 
 # Resources:
