--- a/src/labs/settings/CMakeLists.txt
+++ b/src/labs/settings/CMakeLists.txt
@@ -11,4 +11,5 @@ qt_internal_add_qml_module(LabsSettings
     PUBLIC_LIBRARIES
          Qt::Core
          Qt::Qml
+     OS2_SHORT_NAME Qt6LabSe
 )
