--- a/src/plugins/qmltooling/qmldbg_tcp/CMakeLists.txt
+++ b/src/plugins/qmltooling/qmldbg_tcp/CMakeLists.txt
@@ -14,6 +14,7 @@ qt_internal_add_plugin(QTcpServerConnectionFactoryPlugin
     LIBRARIES
         Qt::Network
         Qt::QmlPrivate
+    OS2_SHORT_NAME qmldbgtc
 )
 
 #### Keys ignored in scope 1:.:.:qmldbg_tcp.pro:<TRUE>:
