--- a/src/quickcontrols2/CMakeLists.txt
+++ b/src/quickcontrols2/CMakeLists.txt
@@ -39,6 +39,7 @@ qt_internal_add_qml_module(QuickControls2
         Qt::Core
         Qt::Gui
         Qt::Quick
+    OS2_SHORT_NAME Qt6QuiCo
 )
 
 qt_internal_extend_target(qtquickcontrols2plugin
