--- a/src/quickdialogs2/quickdialogs2/CMakeLists.txt
+++ b/src/quickdialogs2/quickdialogs2/CMakeLists.txt
@@ -37,6 +37,7 @@ qt_internal_add_qml_module(QuickDialogs2
         Qt::Core
         Qt::Gui
         Qt::Quick
+    OS2_SHORT_NAME Qt6QuiDi
 )
 
 qt_internal_add_docs(QuickDialogs2
