--- a/src/quicklayouts/CMakeLists.txt
+++ b/src/quicklayouts/CMakeLists.txt
@@ -20,4 +20,5 @@ qt_internal_add_qml_module(QuickLayouts
         Qt::GuiPrivate
         Qt::QuickPrivate
         Qt::Qml
+    OS2_SHORT_NAME Qt6QuiLa
 )
