--- a/src/quickshapes/CMakeLists.txt
+++ b/src/quickshapes/CMakeLists.txt
@@ -23,6 +23,7 @@ qt_internal_add_qml_module(QuickShapesPrivate
         Qt::GuiPrivate
         Qt::Qml
         Qt::QuickPrivate
+    OS2_SHORT_NAME Qt6QuiSh.dll
 )
 
 # We need to do additional initialization, so we have to provide our own
