--- a/src/quicktemplates2/CMakeLists.txt
+++ b/src/quicktemplates2/CMakeLists.txt
@@ -132,6 +132,7 @@ qt_internal_add_qml_module(QuickTemplates2
         Qt::Core
         Qt::Gui
         Qt::Quick
+    OS2_SHORT_NAME Qt6QuiTe
 )
 
 qt_internal_extend_target(QuickTemplates2 CONDITION TARGET Qt::QmlModels
