--- a/src/qml/CMakeLists.txt
+++ b/src/qml/CMakeLists.txt
@@ -405,6 +405,7 @@ qt_internal_add_qml_module(Qml
         ${extra_cmake_includes}
     GENERATE_CPP_EXPORTS
     GENERATE_PRIVATE_CPP_EXPORTS
+    OS2_SHORT_NAME qmlplugn
 )
 
 # Linking to the static qml plugin should also automatically link to the worker script
