--- a/src/labs/sharedimage/CMakeLists.txt
+++ b/src/labs/sharedimage/CMakeLists.txt
@@ -17,6 +17,7 @@ qt_internal_add_qml_module(LabsSharedImage
         Qt::QuickPrivate
     GENERATE_CPP_EXPORTS
     GENERATE_PRIVATE_CPP_EXPORTS
+    OS2_SHORT_NAME sharedim
 )
 
 # We need to do additional initialization, so we have to provide our own
