--- a/src/qmltest/CMakeLists.txt
+++ b/src/qmltest/CMakeLists.txt
@@ -41,6 +41,7 @@ qt_internal_add_qml_module(QuickTest
         Qt::Quick
     PRIVATE_MODULE_INTERFACE
         Qt::TestPrivate
+    OS2_SHORT_NAME quicktet
 )
 
 qt_internal_extend_target(QuickTest CONDITION QT_FEATURE_qml_debug
