--- a/src/labs/folderlistmodel/CMakeLists.txt
+++ b/src/labs/folderlistmodel/CMakeLists.txt
@@ -13,4 +13,5 @@ qt_internal_add_qml_module(LabsFolderListModel
     PUBLIC_LIBRARIES
         Qt::CorePrivate
         Qt::QmlPrivate
+    OS2_SHORT_NAME qmlfolls
 )
