--- a/src/labs/platform/CMakeLists.txt
+++ b/src/labs/platform/CMakeLists.txt
@@ -34,6 +34,7 @@ qt_internal_add_qml_module(qtlabsplatformplugin
         Qt::QmlPrivate
         Qt::QuickPrivate
         Qt::QuickTemplates2Private
+    OS2_SHORT_NAME LabsPlat
 )
 
 qt_internal_extend_target(qtlabsplatformplugin CONDITION TARGET Qt::Widgets
