--- a/src/labs/wavefrontmesh/CMakeLists.txt
+++ b/src/labs/wavefrontmesh/CMakeLists.txt
@@ -12,4 +12,5 @@ qt_internal_add_qml_module(LabsWavefrontMesh
         Qt::CorePrivate
         Qt::GuiPrivate
         Qt::QuickPrivate
+    OS2_SHORT_NAME qmlwavfr
 )
