--- a/examples/quickcontrols/wearable/WearableSettings/CMakeLists.txt
+++ b/examples/quickcontrols/wearable/WearableSettings/CMakeLists.txt
@@ -24,6 +24,7 @@ qt_add_qml_module(wearablesettings
     URI WearableSettings
     QML_FILES
         WearableSettings.qml
+    OS2_SHORT_NAME wearsett
 )
 
 target_link_libraries(wearablesettings PUBLIC
