--- a/examples/quickcontrols/wearable/WearableStyle/CMakeLists.txt
+++ b/examples/quickcontrols/wearable/WearableStyle/CMakeLists.txt
@@ -27,6 +27,7 @@ qt_add_qml_module(wearablestyle
         Slider.qml
         Switch.qml
         UIStyle.qml
+    OS2_SHORT_NAME wearstyl
 )
 
 target_link_libraries(wearablestyle PUBLIC
