More short DLL name fixes
Signed-off-by: Paul Smedley <paul@smedley.id.au>

--- a/src/quickcontrols/basic/CMakeLists.txt
+++ b/src/quickcontrols/basic/CMakeLists.txt
@@ -176,6 +176,7 @@ qt_internal_add_qml_module(qtquickcontrols2basicstyleplugin
         Qt::QuickControls2Private
         Qt::QuickPrivate
         Qt::QuickTemplates2Private
+    OS2_SHORT_NAME QuCoBaSt
 )
 
 # Resources:
