--- a/examples/quick/imageprovider/CMakeLists.txt
+++ b/examples/quick/imageprovider/CMakeLists.txt
@@ -25,6 +25,7 @@ qt6_add_qml_module(qmlimageproviderplugin
     CLASS_NAME ImageProviderExtensionPlugin
     SOURCES
         imageprovider.cpp
+    OS2_SHORT_NAME qmlimpro
 )
 
 target_link_libraries(qmlimageproviderplugin PUBLIC
