--- a/src/quickcontrols/basic/impl/CMakeLists.txt
+++ b/src/quickcontrols/basic/impl/CMakeLists.txt
@@ -25,4 +25,5 @@ qt_internal_add_qml_module(qtquickcontrols2basicstyleimplplugin
         Qt::QuickControls2ImplPrivate
         Qt::QuickPrivate
         Qt::QuickTemplates2Private
+    OS2_SHORT_NAME QuCoBaSI
 )
