--- a/src/quickcontrols/material/impl/CMakeLists.txt
+++ b/src/quickcontrols/material/impl/CMakeLists.txt
@@ -46,4 +46,5 @@ qt_internal_add_qml_module(qtquickcontrols2materialstyleimplplugin
         Qt::Quick
         Qt::QuickPrivate
         Qt::QuickTemplates2Private
+    OS2_SHORT_NAME QuCoMaSI
 )
