--- a/examples/quick/imageprovider/CMakeLists.txt
+++ b/examples/quick/imageprovider/CMakeLists.txt
@@ -28,6 +28,7 @@ qt6_add_qml_module(qmlimageproviderplugin
     NO_PLUGIN_OPTIONAL
     NO_GENERATE_PLUGIN_SOURCE
     CLASS_NAME ImageProviderExtensionPlugin
+    OS2_SHORT_NAME qmlimpro
 )
 
 target_sources(qmlimageproviderplugin PRIVATE
