Yet more 8.3 fixes
Signed-off-by: Paul Smedley <paul@smedley.id.au>

--- a/src/qmlmodels/CMakeLists.txt
+++ b/src/qmlmodels/CMakeLists.txt
@@ -25,6 +25,7 @@ qt_internal_add_qml_module(QmlModels
     PRIVATE_MODULE_INTERFACE
         Qt::CorePrivate
         Qt::QmlPrivate
+    OS2_SHORT_NAME QmlModel
 )
 
 qt_internal_extend_target(QmlModels CONDITION QT_FEATURE_qml_itemmodel
