--- a/src/quickcontrols2/fusion/impl/CMakeLists.txt
+++ b/src/quickcontrols2/fusion/impl/CMakeLists.txt
@@ -36,4 +36,5 @@ qt_internal_add_qml_module(qtquickcontrols2fusionstyleimplplugin
         Qt::QuickControls2ImplPrivate
         Qt::QuickPrivate
         Qt::QuickTemplates2Private
+    OS2_SHORT_NAME QuCoFuSI
 )
