--- a/src/qmllocalstorage/CMakeLists.txt
+++ b/src/qmllocalstorage/CMakeLists.txt
@@ -12,4 +12,5 @@ qt_internal_add_qml_module(QmlLocalStorage
         Qt::CorePrivate
         Qt::QmlPrivate
         Qt::Sql
+    OS2_SHORT_NAME QmlLocal
 )
