--- a/src/qmlxmllistmodel/CMakeLists.txt
+++ b/src/qmlxmllistmodel/CMakeLists.txt
@@ -17,6 +17,7 @@ qt_internal_add_qml_module(QmlXmlListModel
         Qt::Qml
     PRIVATE_MODULE_INTERFACE
         Qt::CorePrivate
+    OS2_SHORT_NAME QmlXMLLM
 )
 
 qt_internal_add_docs(QmlXmlListModel
