--- a/src/quickcontrols2/imagine/CMakeLists.txt
+++ b/src/quickcontrols2/imagine/CMakeLists.txt
@@ -109,6 +109,7 @@ qt_internal_add_qml_module(qtquickcontrols2imaginestyleplugin
         Qt::QuickControls2Private
         Qt::QuickPrivate
         Qt::QuickTemplates2Private
+    OS2_SHORT_NAME QuCoImSt
 )
 
 file(GLOB resource_glob_0 RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "images/*.png")
