--- a/src/quickcontrols2/imagine/impl/CMakeLists.txt
+++ b/src/quickcontrols2/imagine/impl/CMakeLists.txt
@@ -27,6 +27,7 @@ qt_internal_add_qml_module(qtquickcontrols2imaginestyleimplplugin
         Qt::QuickControls2ImplPrivate
         Qt::QuickPrivate
         Qt::QuickTemplates2Private
+    OS2_SHORT_NAME QuCoImSI
 )
 
 # Resources:
