--- a/src/quickcontrols2/material/impl/CMakeLists.txt
+++ b/src/quickcontrols2/material/impl/CMakeLists.txt
@@ -38,5 +38,5 @@ qt_internal_add_qml_module(qtquickcontrols2materialstyleimplplugin
         Qt::QuickControls2ImplPrivate
         Qt::QuickPrivate
         Qt::QuickTemplates2Private
-    OS2_SHORT_NAME qtquickl
+    OS2_SHORT_NAME QuCoMaSI
 )
