--- a/src/quickcontrols2/universal/impl/CMakeLists.txt
+++ b/src/quickcontrols2/universal/impl/CMakeLists.txt
@@ -33,4 +33,5 @@ qt_internal_add_qml_module(qtquickcontrols2universalstyleimplplugin
         Qt::QuickControls2ImplPrivate
         Qt::QuickPrivate
         Qt::QuickTemplates2Private
+    OS2_SHORT_NAME QuCoUnSI
 )
