--- a/src/qmllocalstorage/CMakeLists.txt
+++ b/src/qmllocalstorage/CMakeLists.txt
@@ -17,4 +17,5 @@ qt_internal_add_qml_module(QmlLocalStorage
         Qt::Sql
     GENERATE_CPP_EXPORTS
     GENERATE_PRIVATE_CPP_EXPORTS
+    OS2_SHORT_NAME QmlLocal
 )
