--- a/src/qmlxmllistmodel/CMakeLists.txt
+++ b/src/qmlxmllistmodel/CMakeLists.txt
@@ -23,6 +23,7 @@ qt_internal_add_qml_module(QmlXmlListModel
         Qt::CorePrivate
     GENERATE_CPP_EXPORTS
     GENERATE_PRIVATE_CPP_EXPORTS
+    OS2_SHORT_NAME QmlXMLLM
 )
 
 qt_internal_add_docs(QmlXmlListModel
