--- a/src/quick/CMakeLists.txt
+++ b/src/quick/CMakeLists.txt
@@ -235,6 +235,7 @@ qt_internal_add_qml_module(Quick
         Qt::QmlPrivate
     GENERATE_CPP_EXPORTS
     GENERATE_PRIVATE_CPP_EXPORTS
+    OS2_SHORT_NAME qtquick2
 )
 
 # We need to do additional initialization, so we have to provide our own
