--- a/src/labs/folderlistmodel/CMakeLists.txt
+++ b/src/labs/folderlistmodel/CMakeLists.txt
@@ -21,4 +21,5 @@ qt_internal_add_qml_module(LabsFolderListModel
         Qt::QmlModelsPrivate
     GENERATE_CPP_EXPORTS
     GENERATE_PRIVATE_CPP_EXPORTS
+    OS2_SHORT_NAME qmlfolls
 )
