--- a/src/quickcontrols/fluentwinui3/impl/CMakeLists.txt
+++ b/src/quickcontrols/fluentwinui3/impl/CMakeLists.txt
@@ -33,4 +33,5 @@ qt_internal_add_qml_module(QuickControls2FluentWinUI3StyleImpl
         Qt::QmlPrivate
         Qt::Quick
         Qt::QuickPrivate
+    OS2_SHORT_NAME Qt6QCFWI
 )
