Align DLL names with 6.2.x
Signed-off-by: Paul Smedley <paul@smedley.id.au>

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -20,7 +20,7 @@ qt_internal_add_qml_module(QmlCore
     PUBLIC_LIBRARIES
         Qt::Core
         Qt::Qml
-    OS2_SHORT_NAME Qt6QmCoe
+    OS2_SHORT_NAME QtQmlcoe
     )
 
 qt_internal_extend_target(QmlCore CONDITION QT_FEATURE_settings
